--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+public/img/.DS_Store
+public/.DS_Store
 # Runtime data
 pids
 *.pid
@@ -56,4 +57,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
